{
    "name": "MainControls",
    "maps": [
        {
            "name": "PlayerControls",
            "id": "fc8812fa-b9c5-485f-8a7e-0be8957b8922",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "46de5638-a9f9-4929-b875-1768d36d8be6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Mouse",
                    "type": "Button",
                    "id": "cfdad275-a05b-4a9c-bdd3-43a400f3ec74",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "d73bdfd0-130c-4f4e-9849-8a91b2114960",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "60441b1b-edb3-4991-8a01-67ba6e0f141e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d69f9cdb-308b-46bf-a025-ef22bdecadc1",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7b56c863-8922-43af-abf6-4be9ae77ce3b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "be7e326d-18e0-4cf0-bf05-cf1997831868",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "fbb4cd52-2c42-4fac-b3a4-9a84cdffa342",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}